CUL-19: z-index fix for moodle-dialogues.

--- a/theme/cul_boost/scss/custom/_admin.scss
+++ b/theme/cul_boost/scss/custom/_admin.scss
@@ -44,9 +44,13 @@
 }
 
 .moodle-dialogue-base {
-    .yui3-widget-mask,
-    .moodle-dialogue-lightbox,
-    .moodle-dialogue {
-        // z-index: 999 !important;
+    &.moodle-dialogue-confirm {
+        .pagelayout-mydashboard & {
+            .yui3-widget-mask,
+            .moodle-dialogue-lightbox,
+            .moodle-dialogue {
+                z-index: 999 !important;
+            }
+        }
     }
 }
